# DTE-3611-1-25H-Algorithms---Design-and-Analysis

./: CMakeLists.txt  README.md  bibliography.bib  preamble.tex  report.tex
benchmark_and_testing/: CMakeLists.txt
benchmark_and_testing/benchmarks/my_benchmarks/my_amortized_benchmarks/: CMakeLists.txt  my_amortized_benchmarks.cpp  my_pmr_allocator_benchmarks.cpp
benchmark_and_testing/benchmarks/my_benchmarks/my_first_benchmarks/: my_first_benchmarks.cpp
benchmark_and_testing/benchmarks/my_benchmarks/my_knapsack_benchmarks/: CMakeLists.txt  my_knapsack_benchmarks.cpp
benchmark_and_testing/benchmarks/my_benchmarks/my_networkflow_benchmarks/: CMakeLists.txt  my_networkflow_benchmarks.cpp
benchmark_and_testing/benchmarks/my_benchmarks/my_subset_sum_benchmarks/: CMakeLists.txt  my_subset_sum_benchmarks.cpp
benchmark_and_testing/benchmarks/predefined/predefined_graph_path_finding_benchmarks/: predefined_graph_path_finding_benchmarks.cpp
benchmark_and_testing/benchmarks/predefined/predefined_graph_traversal_benchmarks/: predefined_graph_traversal_benchmarks.cpp
benchmark_and_testing/benchmarks/predefined/predefined_sort_benchmarks/: predefined_sort_benchmarks.cpp
benchmark_and_testing/benchmarks/predefined/predefined_string_match_benchmarks/: predefined_string_match_benchmarks.cpp
benchmark_and_testing/benchmarks/templates/benchmark_template/: fixture_benchmark_template.cpp  simple_benchmark_template.cpp
benchmark_and_testing/predefined_utils/include/predefined_utils/benchmark/fixtures/: amortized_bench_fixtures.h  flow_bench_fixtures.h  string_match_bench_fixtures.h
benchmark_and_testing/predefined_utils/include/predefined_utils/testing/fixtures/: flow_testing_fixtures.h  graph_testing_fixtures.h
benchmark_and_testing/predefined_utils/include/predefined_utils/testing/gold/: flow_testing_gold.h  graph_testing_gold.h  sort_testing_gold.h
benchmark_and_testing/unittests/my_tests/my_cyclecanceling_tests/: CMakeLists.txt
benchmark_and_testing/unittests/my_tests/my_knapsack_tests/: CMakeLists.txt  my_knapsack_unittests.cpp
benchmark_and_testing/unittests/my_tests/my_networkflow_tests/: CMakeLists.txt  my_bipartite_matching_unittests.cpp  my_cyclecanceling_unittests.cpp
benchmark_and_testing/unittests/my_tests/my_subset_sum_tests/: CMakeLists.txt  my_subset_sum_unittests.cpp
benchmark_and_testing/unittests/predefined/predefined_graph_path_finding_unittests/: predefined_dijkstra_sp_unittests.cpp
benchmark_and_testing/unittests/predefined/predefined_knapsack_unittests/: predefined_knapsack_unittests.cpp
benchmark_and_testing/unittests/predefined/predefined_network_flow_unittests/: CMakeLists.txt  predefined_bellman_ford_sp_unittests.cpp  predefined_maxflow_unittests.cpp
cmake/: testing_utils.cmake
sections/back/: discussion.tex
sections/experimental/: setup.tex
sections/front/: abstract.tex  introduction.tex
sections/methods/: _main.tex  w1_graph_traversal.tex  w1_shortest_path.tex  w1_string_matching.tex  w2_knapsack.tex  w2_reductions.tex  w3_flow_networks.tex  w3_max_flow.tex  w3_min_cost_flow.tex  w4_amortized.tex  w4_linear_programming.tex
sections/results/: _main.tex  w1_graph.tex  w1_sorting.tex  w2_knapsack.tex  w3_network_flow.tex  w4_amortised.tex  w4_data_structures.tex
whitepaper/: bibliography.bib  preamble.tex
(+28 files in other folders)
